[gd_scene load_steps=4 format=3 uid="uid://g2uylo8j8p44"]

[ext_resource type="Script" path="res://scripts/intag_edit_promt.gd" id="1_m2jmu"]
[ext_resource type="PackedScene" uid="uid://b0pf1366qxb7y" path="res://scenes/category_option_button.tscn" id="2_27gwd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kp6ex"]
bg_color = Color(0.176471, 0.227451, 0.301961, 1)

[node name="TagEditor" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2jmu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0689, 0.0923216, 0.13, 0.490196)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kp6ex")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="DataContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="TagNameLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.968627, 0.709804, 0.184314, 1)
text = "[TagName]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TagDataContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="PrioContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/TagDataContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/TagDataContainer/PrioContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Priority"
horizontal_alignment = 1

[node name="PrioritySpinBox" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/TagDataContainer/PrioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
allow_greater = true
allow_lesser = true
alignment = 1

[node name="CatContaienr" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/TagDataContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/TagDataContainer/CatContaienr"]
layout_mode = 2
size_flags_horizontal = 3
text = "Category"
horizontal_alignment = 1

[node name="CategoryOptionButton" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/TagDataContainer/CatContaienr" instance=ExtResource("2_27gwd")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1
max_heigth = 200

[node name="FetchButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/TagDataContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Go to the review window and fetch data from e621."
text = "Fetch Data"

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/DataContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Done"

[node name="SuggestionContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/SuggestionContainer"]
layout_mode = 2
text = "Suggestions:"

[node name="SuggestionsItemList" type="ItemList" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/SuggestionContainer"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="AddSelectedButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/HBoxContainer/SuggestionContainer"]
layout_mode = 2
text = "Add Selected"
